@@ -92,11 +92,6 @@ class cFileCommunications : public cParsimCommunications
     virtual void send(cCommBuffer *buffer, int tag, int destination);
 
     /**
-     * Sends packed data with given tag to all partitions.
-     */
-    virtual void broadcast(cCommBuffer *buffer, int tag);
-
-    /**
      * Receives packed data with given tag from given destination.
      * Normally returns true; false is returned if blocking was interrupted by the user.
      */
