@@ -26,4 +26,31 @@
 #include "cexception.h"
 
 
+void cParsimCommunications::broadcast(cCommBuffer *buffer, int tag)
+{
+    // Default implementation: send to everyone. Try to do as much of the job
+    // as possible -- if there're exceptions, throw on only one of them.
+    cException *ex = NULL;
+    int n = getNumPartitions();
+    int myProcId = getProcId();
+    for (int i=0; i<n; i++)
+    {
+        try
+        {
+            if (myProcId != i)
+                send(buffer, tag, i);
+        }
+        catch (cException *e)
+        {
+            if (ex)
+               delete e;
+            else
+               ex = e;
+        }
+    }
+
+    if (ex)
+        throw ex;
+}
+
 
