@@ -120,6 +120,9 @@ class cParsimPartition
      * Called when a cTerminationException occurs (i.e. the simulation is
      * about to be finished normally), this methods notifies other partitions
      * about the exception.
+	 *
+	 * This methods "eats" exceptions that occur during broadcast. (We're not
+	 * interested in stacked exceptions.)
      */
     virtual void broadcastTerminationException(cTerminationException *e);
 
@@ -127,6 +130,9 @@ class cParsimPartition
      * Called when a cException occurs (i.e. the simulation is about to be
      * stopped with an error), this methods notifies other partitions
      * about the exception.
+     *
+	 * This methods "eats" exceptions that occur during broadcast. (We're not
+	 * interested in stacked exceptions.)
      */
     virtual void broadcastException(cException *e);
 };
